--- a/lecture1-CN.ipynb
+++ b/lecture1-CN.ipynb
@@ -152,6 +152,60 @@
     "$X$ **诱导**的概率测度。诱导概率测度 $P_{X}$ 是\n",
     " $P$ 通过由 $X$ 所衍生出来的。\n",
     "\n",
+    "```{prf:example} 数据实例\n",
+    "我们以香港最受欢迎的300个Youtube账号为例子，查看他们上传的视频数量。\n",
+    "\n",
+    "数据来源: [香港最受欢迎的300个Youtubers](https://www.kaggle.com/datasets/patriotboy112/hks-top-300-youtubers).\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b710b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d0 = readr::read_csv(\"HKTop300YouTubers.csv\")\n",
+    "print(d0)\n",
+    "\n",
+    "library(magrittr)\n",
+    "\n",
+    "# remove NA and zeros\n",
+    "d0[ d0 == 0 ] <- NA\n",
+    "sel <- d0 %>% is.na( ) %>% apply( 1, any)\n",
+    "d0 %<>% dplyr::filter( !sel )\n",
+    "\n",
+    "d1 <- d0 %>% dplyr::select(3:5)\n",
+    "names(d1) <- c(\"subs\", \"view\", \"count\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dce7ae9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print( d1[[\"count\"]] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2840118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1.log <- log(d1)\n",
+    "hist(d1.log[[\"count\"]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0233e373",
+   "metadata": {},
+   "source": [
     "### 分布函数\n",
     "\n",
     "我们回溯一下几个在本科概率论课程上曾经接触过的概念。**累积分布函数**(cumulative distribution function，简记CDF) $F:\\mathbb{R}\\mapsto[0,1]$ 被定义为\n",
@@ -169,7 +223,42 @@
     "3.  (弱)单调递增,\n",
     "\n",
     "4.  右连续 $\\lim_{y\\to x^{+}}F\\left(y\\right)=F\\left(x\\right).$\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "132cd418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(ecdf(d1.log[[\"count\"]]), verticals = TRUE, do.points = FALSE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb6a1eea",
+   "metadata": {},
+   "source": [
+    "随机变量的第 $q$ 分位点为 $\\min_{x\\in \\mathbb R} P(X \\leq x) \\geq q$。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a49321e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantile(d1.log[[\"count\"]], probs = 1:4/4 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7aa9024",
+   "metadata": {},
+   "source": [
     "```{prf:exercise}\n",
     "画出一个0-1分布的累积分布函数; $X=1$对应的概率为\n",
     "$p\\in\\left(0,1\\right)$ 而 $X=0$ 对应概率 $1-p$ 。\n",
@@ -186,8 +275,141 @@
     "(ii) $\\int_{a}^{b}f\\left(x\\right)dx=F\\left(b\\right)-F\\left(a\\right)$ 。\n",
     "\n",
     "```{prf:example}\n",
-    "我们已经学过了许多的参数分布，比如二元分布、泊松分布、均匀分布、指数分布和正态分布, $\\chi^{2}$, $t$, $F$分布等等。这些都是参数分布，意味着较少的参数就能够完全表征出他们的累积分布函数和概率密度函数。\n",
+    "我们已经学过了许多的参数分布，比如二项分布、泊松分布、均匀分布、指数分布和正态分布, $\\chi^{2}$, $t$, $F$分布等等。这些都是参数分布，意味着较少的参数就能够完全表征出他们的累积分布函数和概率密度函数。\n",
+    "\n",
+    "* 二项分布\n",
+    "\n",
+    "$$\n",
+    "f(x = k ;p) = \\binom{n}{k}  p^k (1-p)^{n-k}\n",
+    "$$\n",
+    "\n",
+    "* 泊松分布 \n",
+    "\n",
+    "$$\n",
+    "f(x = k;\\lambda) = \\frac{\\lambda^k \\exp(-\\lambda)}{k!}\n",
+    "$$\n",
+    "\n",
+    "* 均匀分布\n",
+    "\n",
+    "$$\n",
+    "f(x; a, b) = \\frac{1}{b-a} \\cdot \\mathbf{1}\\{a\\leq x \\leq b\\}\n",
+    "$$\n",
+    "\n",
+    "* 正态分布 \n",
+    "\n",
+    "$$\n",
+    "f(x; \\mu, \\sigma^2) = \\frac{1}{\\sqrt{2\\pi} \\sigma} \\exp\\left( - \\frac{(x-\\mu)^2}{2\\sigma^2}\\right)\n",
+    "$$\n",
+    "\n",
+    "其中均值为 $\\mu$ 而方差为 $\\sigma^2$。\n",
+    "\n",
+    "* 对数正态分布\n",
+    "\n",
+    "$$\n",
+    "f(x; \\mu, \\sigma^2) = \\frac{1}{\\sqrt{2\\pi} \\sigma} \\exp\\left( - \\frac{(\\log(x)-\\mu)^2}{2\\sigma^2}\\right),\n",
+    "$$\n",
+    "\n",
+    "它的均值为 $\\exp(\\mu + 0.5 \\sigma^2)$ 而方差为\n",
+    "$[\\exp(\\sigma^2 - 1)] \\exp(2\\mu+ \\sigma^2)$。\n",
+    "\n",
+    "* $\\chi^{2}$， $t$，和 $F$ 分布\n",
+    "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51061eec",
+   "metadata": {},
+   "source": [
+    "```{prf:example}\n",
+    "`R`可以用一系列指令来处理各种常见的分布函数: `d`代表密度(density)，`p`代表概率(probability)，`q`代表分位点(quantile)，`r`用于生成随机变量。\n",
+    "例如，`dnorm`、`pnorm`、`qnorm`和 `rnorm`都是正态分布的对应函数。形式参数(parameter) $\\mu$ and $\\sigma$ 可以用函数的实际参数(argument)来设定。\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e0b043b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qnorm(0.975)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e75c472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pnorm(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cef9302c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dnorm(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a658d1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnorm(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc905265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rpois(2, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b21a58f7",
+   "metadata": {},
+   "source": [
+    "下方是用于展示的一小段 `R` 语言：\n",
+    "\n",
+    "1. 在均匀的网格`x_axis = seq(-3, 3, by = 0.01)`上画出标准正态分布的密度函数 (黑线)；\n",
+    "2. 生成正态分布的1000个观测值 $N(0,1)$。画出核密度(kernel density)，即密度的非参数估计(红线)；\n",
+    "3. 求出第95分位点和观测值大于第95分位点的实际概率。\n",
+    "在总体中这个概率是5%。那么本次实验会得到什么结果呢？\n",
+    "\n",
+    "(由于我们并未固定随机种子(random seed)，每一次运行的结果会略有不同)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3578f2da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_axis = seq(-3, 3, by = 0.01)\n",
+    "\n",
+    "y = dnorm(x_axis)\n",
+    "plot(y = y, x=x_axis, type = \"l\", xlab = \"value\", ylab = \"density\")\n",
+    "\n",
+    "z = rnorm(1000)\n",
+    "lines( density(z), col = \"red\")\n",
+    "crit = qnorm(.95)\n",
+    "\n",
+    "cat(\"the empirical rejection probability is\", mean( z > crit ), \"\\n\")"
    ]
   },
   {
@@ -260,6 +482,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6058b2c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean( d1.log[[\"count\"]] )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7209715d",
    "metadata": {},
@@ -271,11 +503,27 @@
     "-   事件 $A$ 的概率是指示函数的期望：\n",
     "    $E\\left[1\\left\\{ A\\right\\} \\right]=1\\times P(A)+0\\times P(A^{c})=P\\left(A\\right)$.\n",
     "\n",
-    "-   $E\\left[X^{r}\\right]$ 被称为 $X$ 的 $r$ 阶矩。一个随机变量的**均值**是其一阶矩 $\\mu=E\\left[X\\right]$ ；而二阶 **中心** 矩叫做 $\\mathrm{var}\\left[X\\right]=E\\left[\\left(X-\\mu\\right)^{2}\\right]$ 方差。\n",
+    "-   $E\\left[X^{r}\\right]$ 被称为 $X$ 的 $r$ 阶矩。一个随机变量的**均值**是其一阶矩 $\\mu=E\\left[X\\right]$ ；而二阶**中心**矩叫做 $\\mathrm{var}\\left[X\\right]=E\\left[\\left(X-\\mu\\right)^{2}\\right]$ 方差。三阶中心矩 $E\\left[\\left(X-\\mu\\right)^{3}\\right]$ 称为**偏度**,\n",
+    "    用于衡量随机变量的对称性；四阶矩**峰度** $E\\left[\\left(X-\\mu\\right)^{4}\\right]$ 则用来体现尾部厚度。\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2ec0f35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var(d1.log[[\"count\"]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7e383cc",
+   "metadata": {},
+   "source": [
     "    \n",
-    "    三阶中心矩 $E\\left[\\left(X-\\mu\\right)^{3}\\right]$ 称为**偏度**,\n",
-    "    用于衡量随机变量的对称性；四阶矩**峰度**\n",
-    "    $E\\left[\\left(X-\\mu\\right)^{4}\\right]$ 则用来体现尾部厚度。\n",
     "\n",
     "-   矩条件不一定存在。例如，柯西分布就不存在均值；$t(2)$ 分布不存在方差。\n",
     "\n",
@@ -329,7 +577,17 @@
     "$f(x)=0$ 的特殊情况，那么我们可以将它的**条件密度**简略地写成\n",
     "$f\\left(y|x\\right)=f\\left(x,y\\right)/f\\left(x\\right)$\n",
     "。二元变量的**边际密度** $f\\left(y\\right)=\\int f\\left(x,y\\right)dx$\n",
-    "则是把我们不感兴趣的那个变量通过积分将它卷走。\n"
+    "则是把我们不感兴趣的那个变量通过积分将它消除。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f176a902",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(d1.log$subs, d1.log$view)"
    ]
   },
   {
@@ -368,8 +626,6 @@
    "id": "e36c3056",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "### 独立性\n",
     "\n",
     "如果 $P(A_{1}A_{2})=P(A_{1})P(A_{2})$，我们称 $A_{1}$ 和\n",
@@ -377,10 +633,32 @@
     " $P(A_{1}|A_{2})=P(A_{1})$ 。换言之，如果 $A_{1}$ 和 $A_{2}$ 独立，已知 $A_{2}$ 的信息，将不会改变\n",
     "$A_{1}$ 的概率。\n",
     "\n",
-    "如果两个随机变量 $X$ 和 $Y$ 独立， 那么对于任意两个波莱尔集 $B_{1}$ and $B_{2}$，\n",
+    "如果两个随机变量 $X$ 和 $Y$ 独立， 那么对于任意两个波莱尔集 $B_{1}$ 和 $B_{2}$，\n",
     "会有$P\\left(X\\in B_{1},Y\\in B_{2}\\right)=P\\left(X\\in B_{1}\\right)P\\left(Y\\in B_{2}\\right)$\n",
     "\n",
     "若 $X$ 和 $Y$ 独立，则二者的期望有 $E[XY]=E[X]E[Y]$ 。即期望的积等于积的期望。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1897a560",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y <- matrix(rnorm(200), ncol = 2)\n",
+    "plot(x = Y[, 1], y = Y[, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0a096e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y <- matrix(rnorm(200), ncol = 2) %*% matrix( c(1, 0.5, 0.5, 1), 2 )\n",
+    "plot(x = Y[, 1], y = Y[, 2])"
    ]
   },
   {
@@ -409,13 +687,33 @@
    "id": "ececa7d2",
    "metadata": {},
    "source": [
-    "\n",
-    "令 $A=\\Omega$，我们能够得到\n",
-    "$E\\left[Y\\right]=\\int Y\\mathrm{d}P=\\int E\\left[Y|\\mathcal{G}\\right]\\mathrm{d}P=E\\left[E\\left[Y|\\mathcal{G}\\right]\\right]$ 。这就是著名的**重复期望定律**\n",
+    "令 $A=\\Omega$，我们能够得到 $E\\left[Y\\right]=\\int Y\\mathrm{d}P=\\int E\\left[Y|\\mathcal{G}\\right]\\mathrm{d}P=E\\left[E\\left[Y|\\mathcal{G}\\right]\\right]$。这就是著名的**期望迭代法则**(the law of iterated expectation)\n",
     "\n",
     "$$\n",
     "E\\left[Y\\right]=E\\left[E\\left[Y|\\mathcal{G}\\right]\\right].\n",
-    "$$\n"
+    "$$\n",
+    "\n",
+    "期望迭代法则也称重复期望法则。\n",
+    "\n",
+    "按照条件期望的定义来看，这个公式不难理解。在二元变量的案例中，如果条件密度函数存在，那么条件期望可以这样计算： $E\\left[Y|X\\right]=\\int yf\\left(y|X\\right)\\mathrm{d}y$，其中条件变量 $E\\left[\\cdot|X\\right]=E\\left[\\cdot|\\sigma\\left(X\\right)\\right]$ 是 $X$\n",
+    "生成的最小 $\\sigma$ 域的简化表达。期望迭代法则表明：$E\\left[E\\left[Y|X\\right]\\right]=E\\left[Y\\right]$。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fac9f067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dx <- d1.log %>% \n",
+    "  tibble::add_column(category = d0$category) %>%\n",
+    "  dplyr::group_by(category) %>%\n",
+    "  dplyr::summarize(mean = mean(count), no = dplyr::n() )\n",
+    "print(dx)\n",
+    "\n",
+    "print( sum( dx$mean * ( dx$no/nrow(d1.log) ) ) ) # average over categories\n",
+    "print( mean(d1.log[[\"count\"]])) # overall average"
    ]
   },
   {
@@ -424,12 +722,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "按照条件期望的定义来看，这个公式不难理解。在二元变量的案例中，如果条件密度函数存在，那么条件期望可以\n",
-    "这样计算\n",
-    "$E\\left[Y|X\\right]=\\int yf\\left(y|X\\right)\\mathrm{d}y$，其中条件变量\n",
-    "$E\\left[\\cdot|X\\right]=E\\left[\\cdot|\\sigma\\left(X\\right)\\right]$ 是 $X$\n",
-    "生成的最小$\\sigma$ 域\n",
-    "的简化表达。重复期望定律表明：$E\\left[E\\left[Y|X\\right]\\right]=E\\left[Y\\right]$.\n",
     "\n",
     "下方是条件期望的一些性质：\n",
     "\n",
@@ -472,21 +764,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.2.0"
   },
   "vscode": {
    "interpreter": {
