add citation baron (2020)

--- a/real-data_2.ipynb
+++ b/real-data_2.ipynb
@@ -7,10 +7,10 @@
     "# 数据实例2\n",
     "\n",
     "2008年金融危机之后，世界经济面临严重的经济困境，这重新激发了人们了解银行业危机后果的兴趣。 \n",
-    "Baron等(2020)将银行业危机的概念定义为银行业的中介资金能力严重受损。由于银行危机损害了银行的中介能力，所以股权持有人将首先遭受损失，银行股本将大幅下跌。\n",
+    "{cite}`baron2021banking`将银行业危机的概念定义为银行业的中介资金能力严重受损。由于银行危机损害了银行的中介能力，所以股权持有人将首先遭受损失，银行股本将大幅下跌。\n",
     "而银行股票大幅下跌是否与不利的宏观经济后果有关？\n",
     "\n",
-    "为了研究银行股票回报率是否具有对未来宏观经济的预测能力，Baron等(2020)收集并构建了1870-2016年期间跨越46个国家的面板数据，包括银行股票回报率和实际GDP。为了检查整个回报分布的可预测性，Baron等(2020)将银行股票回报率分成了八个均匀分布的区间：小于-45%、-45%到-30%、-30%到-15%、-15%到0%、0%到15%、15%到30%、30%到45%和大于45%。其中，0%到15%的银行股票回报率被认为是“正常”时期的回报，将在回归中省略，所以面板回归方程中只包含7个区间。\n",
+    "为了研究银行股票回报率是否具有对未来宏观经济的预测能力，{cite}`baron2021banking`收集并构建了1870-2016年期间跨越46个国家的面板数据，包括银行股票回报率和实际GDP。为了检查整个回报分布的可预测性，他们将银行股票回报率分成了八个均匀分布的区间：小于-45%、-45%到-30%、-30%到-15%、-15%到0%、0%到15%、15%到30%、30%到45%和大于45%。其中，0%到15%的银行股票回报率被认为是“正常”时期的回报，将在回归中省略，所以面板回归方程中只包含7个区间。\n",
     "\n",
     "在面板回归中，采用$i$国第$t$年到第$t+1$年的实际GDP对数增长率作为因变量（$\\Delta y_{i,t+1}$)，$i$国第$t$年的银行股票回报率（$r_{i,t}$）落入7个回报区间的7个指标变量作为自变量（$\\mathbb{I} [r_{i,t} \\in B_j] (j=1,...,7)$），并且将$i$国第$t-1$年到第$t$年的实际GDP对数增长率作为控制变量（$\\Delta y_{i,t}$)。线性回归方程如下：\n",
     "\n",
