--- a/ref_teaching.bib
+++ b/ref_teaching.bib
@@ -10,7 +10,16 @@
   publisher={Elsevier}
 }
 
-
+@article{baron2021banking,
+  title={Banking crises without panics},
+  author={Baron, Matthew and Verner, Emil and Xiong, Wei},
+  journal={The Quarterly Journal of Economics},
+  volume={136},
+  number={1},
+  pages={51--113},
+  year={2021},
+  publisher={Oxford University Press}
+}
 
 @article{sargan1958estimation,
   title={The estimation of economic relationships using instrumental variables},
