--- a/real-data_2.ipynb
+++ b/real-data_2.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "library(plm)\n",
-    "data <- read.csv(\"real_data_2.csv\")\n",
+    "data <- read.csv(\"real-data_2.csv\")\n",
     "attach(data)\n",
     "Y <- cbind(Fd1y)\n",
     "X <- cbind(B1_R_B, B2_R_B, B3_R_B, B4_R_B, B6_R_B, B7_R_B, B8_R_B)\n",
